Fix undefined for author on mobile, remove MaterialTitleMobile

--- a/portal/src/components/Materials/MaterialInfo/MaterialInfo.component.less
+++ b/portal/src/components/Materials/MaterialInfo/MaterialInfo.component.less
@@ -5,9 +5,6 @@
     overflow: hidden;
     &_ttl {
       margin: 28px 0 10px;
-      @media @mobile {
-        display: none;
-      }
     }
     &_author_publishers {
       display: flex;
